# daisy-nam-pedal-application

./: .gitignore  LICENSE  marshall.nam  package-lock.json  package.json
.github/workflows/: build.yml
.superpowers/brainstorm/35295-1781624057/content/: auth-flow.html  discover-layout-v2.html  discover-layout.html  download-states.html  nam-import-flow.html
.superpowers/brainstorm/35295-1781624057/state/: server-stopped
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/binaries/: dfu-util-aarch64-apple-darwin  nam2namb-aarch64-apple-darwin
src-tauri/capabilities/: default.json
src-tauri/src/: image_builder.rs  lib.rs  main.rs  store.rs  types.rs  wav.rs
src-tauri/src/commands/: discover.rs  flash.rs  library.rs  mod.rs  presets.rs
src/lib/: api.ts  types.ts
src/pages/: DiscoverPage.tsx  FlashPage.tsx  LibraryPage.tsx  PresetsPage.tsx
