[package]
name = "nam-platform-app"
version = "0.1.0"
description = "NAM Platform — desktop companion for Daisy Seed pedal"
authors = ["you"]
edition = "2021"

[lib]
name = "nam_platform_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri           = { version = "2", features = [] }
tauri-plugin-opener  = "2"
tauri-plugin-dialog  = "2"
tauri-plugin-shell   = "2"
serde           = { version = "1", features = ["derive"] }
serde_json      = "1"
hound           = "3"          # WAV reading
byteorder       = "1"          # little-endian binary writes for QSPI image
uuid            = { version = "1", features = ["v4"] }
thiserror       = "1"
tokio           = { version = "1", features = ["full"] }
chrono          = { version = "0.4", features = ["serde"] }
reqwest         = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
sha2            = "0.10"
base64          = "0.22"
rand            = "0.8"
url             = "2"
urlencoding     = "2"
tauri-plugin-deep-link = "2"
